# Web3-Student-Lab

./: .gitignore  README.md  REDIS_IMPLEMENTATION_SUMMARY.md  SMART_WALLET_IMPLEMENTATION.md  contract_issues_batch1.json  package-lock.json
contracts/: Cargo.toml  test_output.txt
contracts/commit_reveal_rng/: Cargo.toml
contracts/commit_reveal_rng/src/: lib.rs
contracts/multisig_wallet_timelock/: Cargo.toml  lib.rs
contracts/payment_streaming/: Cargo.toml
contracts/payment_streaming/src/: lib.rs
contracts/proxy/src/: tests.rs
contracts/quadratic_funding/: Cargo.toml
contracts/quadratic_funding/src/: lib.rs
contracts/smart_vault/: Cargo.toml
contracts/smart_vault/src/: lib.rs
contracts/src/: activity_log.rs  enrollment.rs  execution_engine.rs  file_notarization.rs  interest_accrual.rs  lib.rs  oracle_aggregator.rs  oracle_aggregator_test.rs  payment_gateway.rs  revocation.rs  route_optimizer.rs  session.rs  staking.rs  statistics.rs  tests.rs  timestamping.rs  token_buyback.rs  verification.rs
contracts/src/tests/: revocation_test.rs  savings_tests.rs  test_subscription.rs  verification_test.rs
contracts/test_snapshots/tests/: admin_can_revoke_certificate.1.json  admin_can_set_mint_cap_via_multisig.1.json  batch_issue_emits_events.1.json  batch_issue_gas_efficiency.1.json  batch_issue_multiple_certificates_successfully.1.json  batch_issue_respects_mint_cap.1.json  batch_issue_validates_max_size.1.json  cannot_set_zero_mint_cap_via_multisig.1.json  each_student_gets_unique_storage_key.1.json  (+32 more)
contracts/zk_proof_verifier/: Cargo.toml
(+332 files in other folders)
